syntax = "proto2";

import "person.proto";
package person.service;
option java_package = "com.study.person.service";
option java_outer_classname = "PersonService";

service SavePersonInfo{
    rpc savePerson(person.bean.PersonInfo) returns (person.bean.Result){}
}